# sumi

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: migrate_history.sh
src/: ai.py  ai_usage.py  app.py  config.py  joke_targets.py  jokes.py  migrate_history.py  polls.py  reactions.py  statistic.py  summarize.py  utils.py
src/config/: common.py  ollama.py
src/core/: felix_special.py  get_chat_history.py  history_storage.py  new_message.py  poll.py  reconcile_members.py  save_message.py  statistic.py  summarize.py
src/handlers/: interaction_handlers.py  member_handlers.py  message_handlers.py  misc_handlers.py  poll_handlers.py  profile_handlers.py  shared.py  stats_handlers.py  summarize_handlers.py
src/helpers/: member.py  membership.py  text_to_timedelta.py  util.py
src/history/: read.py  save.py  storage.py
src/members/: events.py  reconcile.py  registry.py
src/sumi/: ai.py  ai_usage.py  app.py  config.py  joke_targets.py  jokes.py  polls.py  reactions.py  statistic.py  summarize.py  utils.py
src/sumi/handlers/: interaction_handlers.py  member_handlers.py  message_handlers.py  misc_handlers.py  poll_handlers.py  profile_handlers.py  shared.py  stats_handlers.py  summarize_handlers.py
tests/: test_ai_usage.py  test_get_chat_history.py  test_history_read.py  test_history_storage.py  test_integration.py  test_joke_targets.py  test_jokes.py  test_member_tracking.py  test_new_message.py  test_reactions.py  test_save_message.py  test_statistic.py  test_text_to_timedelta.py  test_util.py  test_utils.py
(+6 files in other folders)
