[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sumi"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv==1.0.1",
    "python-telegram-bot[job-queue]==21.4",
    "pytimeparse==1.1.8",
    "openai==1.35.13",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
